<resources>
    <string name="app_name">WiFiBattles</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="audio_enabled">Enable game sounds</string>
    <string name="username_change">Change your username</string>
    <string name="more">Discover more...</string>
    <string name="no_username">Username not setted</string>
    <string name="game_start">Start a game</string>
    <string name="select_picture">Profile picture</string>
    <string name="gen_sett">General settings</string>
    <string name="game_sett">Game settings</string>
    <string name="no_photo_selected">No picture selected!</string>
    <string name="delete_picture">Delete your profile picture</string>
    <string name="take_picture">Take a photo for your profile picture</string>
    <string name="camera_unavailable">Camera unavailable!</string>
    <string name="join_a_game">Wait for a connection</string>
    <string name="start_a_game">Connect with a friend</string>
    <string name="wifi_necessary">WiFi must be turned on to start a new game!</string>
    <string name="waiting_connection">Waiting for connections...</string>
    <string name="click_device">Click a device to start a new connection</string>
    <string name="anon">Anonymous</string>
    <string name="ready">Ready!</string>
    <string name="username_required">Insert your username...</string>
    <string name="game_instructions">Battle preparation</string>
    <string name="ships_placement_1">Place</string>
    <string name="ships_placement_2">ships on the battlefield! Then press the \'READY\' button. Tap a placed ship to remove.</string>
    <string name="limit_reached">You have placed all the available ships! Tap on a placed ship to remove.</string>
    <string name="ships_available"># Ships available :</string>
    <string name="my_turn">MY TURN</string>
    <string name="his_turn">WAIT</string>
    <string name="turn_num">Turn #</string>
    <string name="victory">Victory!</string>
    <string name="defeat">Defeat!</string>
    <string name="game_ended">Game ended</string>
    <string name="exit_1">Exit without saving</string>
    <string name="exit_2">Save and exit</string>
    <string name="MySurrender">You gave up. Enemy victory!</string>
    <string name="EnemySurrender">Enemy gave up. Victory!</string>
    <string name="hit">Ship hitted!</string>
    <string name="miss">Ship missed!</string>
    <string name="surrender">Surrender</string>
    <string name="match_list">Match list</string>
    <string name="you">You</string>
    <string name="Enemy">Enemy</string>
    <string name="played_turns">"Moves: "</string>
    <string name="Available">"My ships available: "</string>
    <string name="Destroyed">"My ships destroyed: "</string>
    <string name="Hitted">"Enemy ships hitted: "</string>
    <string name="Missed">"Enemy ships missed: "</string>
    <string name="cancel">Cancel a saved match</string>
    <string name="del_confirm">Are you sure you want to delete this game?</string>
    <string name="ScoreBoard">Score Board</string>
    <string name="All">All</string>
    <string name="Points">Points</string>
    <string name="Victory">Victories</string>
    <string name="Loss">Loss</string>
    <string name="No_surrender">Exclude surrendered games</string>
    <string name="ShipsNO">Number of ships</string>
    <string name="Save">Save</string>
    <string name="TODO">This feature will be realized...</string>
    <string name="address">Address N/A</string>
    <string name="ConnectionError">Connection error! Game stopped. It won\'t be saved in the database.</string>
    <string name="no_empty_username">Empty username not allowed!</string>
    <string name="discover_failed">DiscoverPeers Failed, try again later!</string>
    <string name="Tie">Tie</string>
    <string name="location_na">Location N/A</string>
    <string name="no_back">If you will go back the game will be forcibly closed. Are you sure to continue?</string>
    <string name="no_exit">Don\'t exit</string>
    <string name="yes_exit">Exit anyway</string>
    <string name="hey">Warning!</string>
    <string name="available_devices">Available devices</string>
    <string name="refresh">Refresh list</string>
    <string name="permission_game">Permission required to start a new WifiBattle game!</string>
    <string name="permission_photo">Rejecting this permission won\'t allow you to manage your profile picture. Please give the permission.</string>
    <string name="connection_ok">Connected with</string>
    <string name="connection_failed">Connection failed</string>
    <string name="DeviceAvailable">Available</string>
    <string name="DeviceInvited">Invited</string>
    <string name="DeviceFailed">Failed</string>
    <string name="DeviceUnavailable">Unavailable</string>
    <string name="same_points">Same points</string>
    <string name="position_necessary">Access to position needed!</string>
    <string name="wifi_off">WiFi is off!</string>
    <string name="discover_success">Discovery started successfully!</string>
    <string name="dev_available">Available</string>
    <string name="dev_invited">Invited</string>
    <string name="dev_unavailable">Unavailable</string>
    <string name="dev_failed">Failed</string>
</resources>