<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/waiting_room">

    <TextView
        android:id="@+id/conn_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_connection"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/devices_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/refresh_peers"
        android:layout_centerHorizontal="true"
        android:text="@string/available_devices"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conn_waiting"
        android:layout_centerInParent="true"
        android:progressTint="@color/buttonbackground" />

    <Button
        android:id="@+id/refresh_peers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/buttonbackground"
        android:text="@string/refresh"
        android:textColor="@color/black" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/devices_title"
        android:id="@+id/devices_list"/>

</RelativeLayout>