<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/match_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/match_list"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/match_list"
        android:background="@drawable/custom_border"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/butt_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/All"
                android:scaleType="centerInside"
                android:src="@drawable/all_records" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/All"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/butt_point_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/butt_all"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Points"
                android:scaleType="centerInside"
                android:src="@drawable/increasing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Points"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/butt_victories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/butt_point_desc"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Victory"
                android:scaleType="centerInside"
                android:src="@drawable/win" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Victory"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/butt_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/butt_victories"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Loss"
                android:scaleType="centerInside"
                android:src="@drawable/defeat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loss"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/butt_point_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/butt_point_asc"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Points"
                android:rotation="270"
                android:scaleType="centerInside"
                android:src="@drawable/decreasing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Points"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/butt_tie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/butt_loss"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Tie"
                android:scaleType="centerInside"
                android:src="@drawable/tie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_points"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <Switch
            android:id="@+id/no_surrendered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butt_point_desc"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/No_surrender"
            android:textStyle="italic" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_bar"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>