<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/upper_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/custom_border">


        <Button
            android:id="@+id/surrender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/surrender"
            android:textColor="@color/black"
            android:backgroundTint="@color/buttonbackground"
            android:visibility="invisible" />

        <Button
            android:id="@+id/ships_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/buttonbackground"
            android:text="@string/ready"
            android:textColor="@color/black"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:fontFamily="casual"
            android:text="@string/ships_available"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_info"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="casual"
            android:text="Turno "
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/score_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/surrender"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="casual"
            android:text="@string/ScoreBoard"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <it.di.unipi.mat582418.wifibattle.Game.TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_bar"
        android:id="@+id/my_table"/>

    <it.di.unipi.mat582418.wifibattle.Game.TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_bar"
        android:id="@+id/opponent_table"/>

</RelativeLayout>