<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/user_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/my_sea_background"
        android:layout_marginTop="15dp"
        android:src="@drawable/user_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:contentDescription="user picture"/>

    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/user_picture">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/buttonbackground"
            android:src="@drawable/settings_icon_foreground" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/gamehystory"
            android:backgroundTint="@color/buttonbackground"
            android:src="@drawable/archive_foreground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/join_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@drawable/my_sea_background"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_a_game"
            android:fontFamily="casual"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonbackground"
            android:src="@drawable/connect_foreground"
            app:iconTint="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/create_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/my_sea_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/join_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="casual"
            android:text="@string/start_a_game" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/buttonbackground"
            android:src="@drawable/build_foreground"
            app:iconTint="@color/white" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start"
        android:clickable="true"
        android:text="@string/game_start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/black"
        app:icon="@drawable/swords"
        app:iconTint="@color/white"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>