<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/appname_pregame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appname_pregame" />

    <RelativeLayout
        android:id="@+id/player_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname_pregame"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="casual"
            android:padding="8dp"
            android:text="player1"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/your_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/your_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/my_sea_background"
            android:contentDescription="User image"
            android:src="@drawable/user_icon_foreground" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opponent_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname_pregame"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/opponent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="casual"
            android:padding="8dp"
            android:text="player2"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/opponent_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/opponent_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/my_sea_background"
            android:contentDescription="User image"
            android:src="@drawable/user_icon_foreground" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:text="VS"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/player_descr"
        app:layout_constraintEnd_toStartOf="@+id/opponent_descr"
        app:layout_constraintStart_toEndOf="@+id/player_descr"
        app:layout_constraintTop_toBottomOf="@+id/appname_pregame" />

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_descr"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible">

        <NumberPicker
            android:id="@+id/number_of_ships"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/number_of_ships"
            android:layout_toEndOf="@id/number_of_ships"
            android:fontFamily="casual"
            android:text="@string/ShipsNO"
            android:textSize="15sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/send_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:backgroundTint="@color/buttonbackground"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />



</androidx.constraintlayout.widget.ConstraintLayout>